# WordsCrossing

./: CMakeLists.txt
src/: combiner.cpp  combiner.h  main.cpp  test_main.cpp
